--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="samyy-tselebnyy-produkt" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=u7EZBWb21t4AX_WvpGk&oh=29f5df1b50656f84e23a6e7a05e1081d&oe=5E9A552A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="rostki-lyutserny-xxxxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=MNzOU9CltEsAX_zYHqd&oh=bbab02abd53e8dd2c0a6af616320cbd2&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="vodaxchay-s-tim-yanom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=NhDtu7g1hh4AX_a_oR5&oh=7cf993462f324e969883b425ab7811d9&oe=5EA4C91E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=OOZK_5f8vxYAX8HDaFl&oh=1011ffc57935cd73c01f64390fe9f214&oe=5EA4C91E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="tim-yan---dushistyy-antivirus" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=3tuMsOJif-cAX-f6Erm&oh=01840e0ee4d4de924144b5e14bd7e5bb&oe=5ED4DEA9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=TB91oBXszcoAX9KipYa&oh=bfb7a714ea4d677397625814e96e6608&oe=5ED4DEA9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dorogie-druz-yax-ya-khochu-ot-vsey-dushi-pozdravit-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JAAmmUSj6K0AX-NN9qM&oh=4c0ae750db7ffeb36ec1b4a12ad5a4ad&oe=5EAA2B32" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JAAmmUSj6K0AX-NN9qM&oh=7241f73050ef9645076153f434a2b786&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gDb7ofUbWjcAX8CKWJ3&oh=5db2dbed5d067a4534845491daceb8c8&oe=5E225E52" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gDb7ofUbWjcAX8CKWJ3&oh=858064c9fb52a9c95a82b43a8c2974aa&oe=5E23AFD2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-chaya-iz-khurmy-dlya-lecheniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77110458_588200205080677_5107032566509865313_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ReVNqOC5y98AX9Bol3x&oh=305b226d1b10ecc6b3cb943a8990a2d5&oe=5ED627E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77110458_588200205080677_5107032566509865313_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=WeDb-IOG0_4AX-UYf5B&oh=06a294bf3364113f94b5401c7789bbc9&oe=5ED627E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ukrop-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80435458_1252978434894673_5953674433393083400_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=VWpPIYnzLpoAX-r8ELh&oh=8c1c8fe125e790b508415b51812d9877&oe=5ED7B68B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="УКРОП 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80435458_1252978434894673_5953674433393083400_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=xwJAXyIU63sAX_qrlpG&oh=a4459bbce3db6dad1ece53ba554b536f&oe=5ED7B68B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="УКРОП 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-my-znaem-o-petrushke" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75576703_623080791779685_500093228300963932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=K3Ohw6ss61EAX8XyFcr&oh=723637866c900126b1c1b4436a95cb05&oe=5EA5A74F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО МЫ ЗНАЕМ О ПЕТРУШКЕ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75576703_623080791779685_500093228300963932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=hVfhyt5JdYAAX8g-wJg&oh=6179046d753ea007c94aff2511a13a6b&oe=5EA5A74F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО МЫ ЗНАЕМ О ПЕТРУШКЕ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="novogodniy-stol-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76851461_567100334111816_8790846081603229564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=OUuJwSfrpdQAX__whra&oh=bfc51fb24245dd9d0b06593ddc345949&oe=5E99BEB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВОГОДНИЙ СТОЛ 🎄🥂">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76851461_567100334111816_8790846081603229564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=fjyD8IkGfSsAX8C4f8S&oh=e0fbeeb63b9e667973d4fc85f54d9dce&oe=5E99BEB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВОГОДНИЙ СТОЛ 🎄🥂">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="simptomy-khronicheskogo-obezvozhivaniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=1hP4AnLkOq4AX_ciXOl&oh=3817cbf1e63fabe8ffe7f3574d27f243&oe=5E2254DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="varikoz-kak-sledstvie-khronicheskogo" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75602183_154596209213826_4616373966861890671_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=C3UK2bd47_MAX8K473a&oh=945cfa2217dc91a5260cc8c532829769&oe=5EA98C1B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВАРИКОЗ КАК СЛЕДСТВИЕ ХРОНИЧЕСКОГО">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=rVPx31dzYggAX9SKkAH&oh=c896414f5831c6e05657dc500c284324&oe=5E23A65F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
