--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж">
-    <meta name="keywords" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
+    <meta name="description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь смузи детокс тенерифе tenerife">
+    <meta name="keywords" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь смузи детокс тенерифе tenerife" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
+    <meta property="og:description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь смузи детокс тенерифе tenerife" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -68,7 +68,7 @@
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
 					</div>
 					<div id="settingsContainer" class="header__right" style="display:none">
-						<button onclick="window.open('http://itsinsta.site/page.html?project=anishapo_nutrition');" class="btn stories-popup__buy">Настроить</button>
+						<button onclick="window.open('http://itsinsta.site/page.html?project=anishapo_nutrition', '_self');" class="btn stories-popup__buy">Настроить</button>
 					</div>
 				</div>
 			</div>
@@ -155,7 +155,7 @@
 
 
 						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=u7EZBWb21t4AX_WvpGk&oh=29f5df1b50656f84e23a6e7a05e1081d&oe=5E9A552A" alt="">
+							<center><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=BYdV8wJgQFMAX8pnll8&oh=c56adbfb7182638e497335d1ba1c0887&oe=5EBEEDD1" alt="">
 							</img></center>
 						</div>
 
@@ -227,7 +227,7 @@ var getUrlParameter = function getUrlParameter(sParam) {
 
 $(document).ready(function(){
 	var lid = getUrlParameter("lid");
-	if (lid) {
+	if (lid && lid != "true") {
         localStorage.setItem("hasToken", true);
 
 		$("#settingsContainer").show();
