--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="sok-travy-yachmenya-xxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=BYdV8wJgQFMAX8pnll8&oh=c56adbfb7182638e497335d1ba1c0887&oe=5EBEEDD1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СОК ТРАВЫ ЯЧМЕНЯ 😎🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="samyy-tselebnyy-produkt" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=u7EZBWb21t4AX_WvpGk&oh=29f5df1b50656f84e23a6e7a05e1081d&oe=5E9A552A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rostki-lyutserny-xxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=MNzOU9CltEsAX_zYHqd&oh=bbab02abd53e8dd2c0a6af616320cbd2&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=uNM0DC4Vc0kAX_Teole&oh=1a2adceaf94588c4297b860ee0276e05&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="efirnoe-maslo-tim-yana" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FtDwlEESNFkAX-dLRZg&oh=f0385d727f01d67ed812e098be2dbc43&oe=5EA58585" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=XbHWSbM3Lf0AX-dY861&oh=6e75499b25f95c090ac4f2068e96d3c6&oe=5EA58585" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dorogie-druz-yax-ya-khochu-ot-vsey-dushi-pozdravit-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JAAmmUSj6K0AX-NN9qM&oh=7241f73050ef9645076153f434a2b786&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=8tgn1wws2LIAX_SKA6G&oh=ff472f50d28dfdb9f984f5ff03e4e6ce&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gDb7ofUbWjcAX8CKWJ3&oh=858064c9fb52a9c95a82b43a8c2974aa&oe=5E23AFD2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Ki2if2MJXVYAX_nau9N&oh=85e9e4c93056d24f130cb0f57f009b9d&oe=5E250152" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-zhe-ty-esh-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=lgVg1bkPOUAAX8Oaibh&oh=e204dd53a1fc896996370b2062cc1d7c&oe=5E995B94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=BtZ4_O8R8Q0AX9ZkJYs&oh=c82476d26d43aa29384b2241590ea772&oe=5E995B94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="novogodniy-stol-xxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76851461_567100334111816_8790846081603229564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=fjyD8IkGfSsAX8C4f8S&oh=e0fbeeb63b9e667973d4fc85f54d9dce&oe=5E99BEB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВОГОДНИЙ СТОЛ 🎄🥂">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="simptomy-khronicheskogo-obezvozhivaniya" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=rVPx31dzYggAX9SKkAH&oh=c896414f5831c6e05657dc500c284324&oe=5E23A65F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -606,6 +606,12 @@ $(document).ready(function() {
 				createStory(currentTitle);
 			}
 		}
+
+		$(".items-item").each(function() {
+			var checkbox = $(this).find("input");
+			checkbox.prop("checked", false);
+		});
+		cleanupItems();
 	});
 
 	$("#btn_delete").click(function(){
