--- a/links.html
+++ b/links.html
@@ -155,7 +155,7 @@
 
 
 						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=BYdV8wJgQFMAX8pnll8&oh=c56adbfb7182638e497335d1ba1c0887&oe=5EBEEDD1" alt="">
+							<center><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=SOKK88AlTRsAX8xrefx&oh=d58518b07a28d2955705c19200cd5f72&oe=5EBEEDD1" alt="">
 							</img></center>
 						</div>
 
@@ -232,6 +232,9 @@ $(document).ready(function(){
 
 		$("#settingsContainer").show();
 		$("#settingsContainer").children("btn").first().attr("onclick", 'window.open("http://itsinsta.site/invite.html?invitationId="' + lid + ')');
+	}
+	else if (lid && lid == "true") {
+        localStorage.setItem("hasToken", true);
 	}
 	else if (localStorage.getItem("hasToken"))
 	{
